[metadata]
name = ext-message
author = Jacob Jeffries
author_email = jeffriesjacob0@gmail.com
url = https://github.com/jwjeffr/ext-message
long_description_content_type = text/markdown
long_description = file: README.md
version = 1.0.1

[options.entry_points]
console_scripts =
    ext-message = ext_message:send_msg_